fix: top margin

--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -1,5 +1,5 @@
 <header class="tw-relative">
-	<div class="tw-flex tw-justify-between tw-gap-6">
+	<div class="tw-flex tw-justify-between tw-gap-6 tw-items-center">
 		<div class="tw-flex oeb-section-sm md:tw-max-w-[70%]">
 			<figure class="tw-relative">
 				<img
@@ -25,7 +25,7 @@
 			</hgroup>
 		</div>
 
-		<aside class="tw-w-auto tw-hidden md:tw-grid !tw-content-center tw-absolute tw-right-0 tw-top-0">
+		<aside class="tw-w-auto tw-hidden md:tw-grid !tw-content-center tw-absolute tw-right-0 tw-top-[17.5%]">
 			<p
 				*ngIf="isFullIssuer(issuer) && issuer.apiModel && !issuer.apiModel.verified"
 				class="u-margin-top1x u-width-paragraph"
