feat: use optional details component

--- a/src/app/issuer/components/badgeclass-generate-qr/badgeclass-generate-qr.component.html
+++ b/src/app/issuer/components/badgeclass-generate-qr/badgeclass-generate-qr.component.html
@@ -67,6 +67,12 @@
 							<span>{{ validity }}</span>
 						</div>
 					}
+					@if (activity_place) {
+						<div class="tw-flex tw-flex-col">
+							<span class="tw-font-bold">{{ 'RecBadge.venue' | translate }}</span>
+							<span>{{ activity_place }}</span>
+						</div>
+					}
 				</div>
 			</div>
 			<div class="tw-max-w-[630px]">
