--- a/src/app/issuer/components/badgeclass-issue/badgeclass-issue.component.html
+++ b/src/app/issuer/components/badgeclass-issue/badgeclass-issue.component.html
@@ -99,7 +99,7 @@
 				<oeb-optional-details
 					[parentForm]="issueForm"
 					[showEvidence]="false"
-					[showVenue]="true"
+					[showLocation]="true"
 					[showCourseDate]="true"
 				>
 				</oeb-optional-details>
