--- a/src/app/issuer/components/edit-qr-form/edit-qr-form.component.html
+++ b/src/app/issuer/components/edit-qr-form/edit-qr-form.component.html
@@ -58,7 +58,7 @@
 						[parentForm]="qrForm"
 						[showExpiration]="true"
 						[showEvidence]="false"
-						[showVenue]="true"
+						[showLocation]="true"
 						[showCourseDate]="true"
 					>
 					</oeb-optional-details>
