--- a/src/app/issuer/components/badgeclass-issue-bulk-award-confirmation/badgeclass-issue-bulk-award-confirmation.component.html
+++ b/src/app/issuer/components/badgeclass-issue-bulk-award-confirmation/badgeclass-issue-bulk-award-confirmation.component.html
@@ -94,7 +94,7 @@
 	<oeb-optional-details
 		[parentForm]="optionalDetailsForm"
 		[showEvidence]="false"
-		[showVenue]="true"
+		[showLocation]="true"
 		[showCourseDate]="true"
 	>
 	</oeb-optional-details>
