--- a/src/app/common/components/network/oeb-network-detail.component.html
+++ b/src/app/common/components/network/oeb-network-detail.component.html
@@ -134,6 +134,7 @@
 				[issuerTitle]="badge.issuerName"
 				[badgeIssueDate]="badge.createdAt"
 				[public]="true"
+				[network]="true"
 				[publicUrl]="badge.url"
 				[issuerSlug]="badge.issuerSlug"
 				[competencies]="badge.extension['extensions:CompetencyExtension']"
