--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -412,9 +412,7 @@
 						[recipientTranslation]="'Issuer.recipientsViaThisInstitution'"
 						(directBadgeAward)="routeToBadgeAward($event, issuer)"
 						(qrCodeAward)="routeToQRCodeAward($event, issuer)"
-						(redirectToBadgeDetail)="
-							routeToBadgeDetail($event.badge, group.networkIssuer, $event.focusRequests)
-						"
+						(redirectToBadgeDetail)="routeToBadgeDetail($event.badge, issuer, $event.focusRequests)"
 					></badges-datatable>
 				}
 			</div>
