fix: redirect using current issuer slug (#1778)

--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -384,9 +384,7 @@
 						[badges]="group.badges"
 						(directBadgeAward)="routeToBadgeAward($event, issuer)"
 						(qrCodeAward)="routeToQRCodeAward($event, issuer)"
-						(redirectToBadgeDetail)="
-							routeToBadgeDetail($event.badge, group.networkIssuer, $event.focusRequests)
-						"
+						(redirectToBadgeDetail)="routeToBadgeDetail($event.badge, issuer, $event.focusRequests)"
 					></badges-datatable>
 				}
 			</div>
