--- a/src/app/issuer/components/badgeclass-edit/badgeclass-edit.component.html
+++ b/src/app/issuer/components/badgeclass-edit/badgeclass-edit.component.html
@@ -10,7 +10,7 @@
 			<div class="topbar-x-heading">
 				<h1>{{ 'EditBadge.editBadge' | translate }}</h1>
 			</div>
-			<p class="topbar-x-subheading">{{ 'EditBadge.editBadgeInfo' | translate }}</p>
+			<p class="topbar-x-subheading">{{ 'Badge.editBadgeInfo' | translate }}</p>
 		</div>
 	</header>
 
