--- a/src/app/issuer/components/badgeclass-edit-issued/badgeclass-edit-issued.component.html
+++ b/src/app/issuer/components/badgeclass-edit-issued/badgeclass-edit-issued.component.html
@@ -3,71 +3,68 @@
 		<div class="oeb-breadcrumbs">
 			<bg-breadcrumbs [linkentries]="breadcrumbLinkEntries"></bg-breadcrumbs>
 		</div>
-		<div class="oeb-section-sm tw-max-w-[1016px] !tw-pb-0">
-			<div class="oeb-headline-container-sm !tw-pb-0">
-				<h1 hlmH1 class="tw-text-purple tw-font-black">
-					@if (category === 'participation') {
-						<span>
-							{{ 'Issuer.createParticipationBadge' | translate }}
-						</span>
-					}
-					@if (category === 'competency') {
-						<span>
-							{{ 'Issuer.createCompetencyBadge' | translate }}
-						</span>
-					}
-				</h1>
-			</div>
-		</div>
+		<header class="tw-mt-16 tw-pb-10">
+			<h1 hlmH1 class="tw-text-purple tw-mb-6 tw-font-black">{{ 'EditBadge.editBadge' | translate }}</h1>
+			<p hlmP size="lg">{{ 'Badge.editAfterIssuedInfo' | translate }}</p>
+		</header>
 
-		<div *bgAwaitPromises="[issuerLoaded]">
-			<div class="tw-max-w-[1016px]">
-				<form [formGroup]="badgeClassForm.rawControl" #formElem (ngSubmit)="onSubmit()" novalidate>
-					<div class="section tw-text-oebblack tw-mt-6">
-						<h2 hlmH2 class="tw-font-bold">{{ 'Badge.copyBadgeHeadline' | translate }}</h2>
-						<p
-							class="tw-text-purple tw-italic"
-							[innerHTML]="
-								('Badge.copyBadgeDescription1' | translate) +
-								'<br />' +
-								('Badge.copyBadgeDescription2' | translate)
-							"
-						></p>
-						<div class="tw-mt-2 tw-mb-2">
-							<oeb-checkbox
-								[control]="badgeClassForm.rawControlMap.copy_permissions_allow_others"
-								[text]="'Badge.copyLabelOthers' | translate"
-							/>
-						</div>
+		<section *bgAwaitPromises="[issuerLoaded]">
+			<h2 hlmH2 class="tw-font-bold !tw-text-oebblack tw-pb-4">
+				{{ 'CreateBadge.optionalBadgeDetails' | translate }}
+			</h2>
+			<form [formGroup]="badgeClassForm.rawControl" #formElem (ngSubmit)="onSubmit()" novalidate>
+				<section class="section tw-text-oebblack tw-text-lg tw-pb-6">
+					<h2 hlmH2 class="!tw-text-oebblack tw-mb-4">{{ 'Badge.copyBadgeHeadline' | translate }}</h2>
+					<p class="tw-italic tw-mb-4" [innerHTML]="'Badge.copyBadgeDescription1' | translate"></p>
+					<p class="tw-text-purple tw-italic" [innerHTML]="'Badge.copyBadgeDescription2' | translate"></p>
+					<div class="tw-mt-2 tw-mb-2">
+						<oeb-checkbox
+							[text]="'Badge.copyLabelOthers' | translate"
+							[control]="badgeClassForm.rawControlMap.copy_permissions_allow_others"
+						/>
 					</div>
+				</section>
 
-					<div
-						class="tw-flex tw-justify-between md:tw-justify-end tw-flex-wrap sm:tw-flex-nowrap tw-gap-2 tw-mt-8"
+				<section class="section tw-text-oebblack tw-text-lg">
+					<h2 hlmH2 class="!tw-text-oebblack tw-mb-4">{{ 'CreateBadge.expiration' | translate }}</h2>
+					<p class="tw-italic tw-mb-4" [innerHTML]="'CreateBadge.expirationInfo' | translate"></p>
+					<div class="tw-flex tw-gap-3 tw-items-baseline">
+						<span>{{ 'General.count' | translate }}</span>
+						<oeb-input
+							[noTopMargin]="true"
+							[control]="badgeClassForm.rawControlMap.expiration"
+							fieldType="number"
+						></oeb-input>
+						<span>{{ 'General.days' | translate }}</span>
+					</div>
+				</section>
+
+				<div
+					class="tw-flex tw-justify-between md:tw-justify-end tw-flex-wrap sm:tw-flex-nowrap tw-gap-2 tw-mt-8"
+				>
+					<oeb-button
+						class="tw-mr-4"
+						type="button"
+						variant="secondary"
+						(click)="cancelClicked()"
+						[disabled]="!!savePromise"
+						[class.disabled]="!!savePromise"
+						[disabled-when-requesting]="true"
+						text="{{ 'General.cancel' | translate }}"
+					></oeb-button>
+
+					<oeb-button
+						id="create-badge-btn"
+						type="submit"
+						width="max_content"
+						[disabled]="!!savePromise"
+						[loading-promises]="[savePromise]"
+						loading-message="{{ 'General.save' | translate }}"
+						text="{{ 'General.save' | translate }}"
 					>
-						<oeb-button
-							class="tw-mr-4"
-							type="button"
-							variant="secondary"
-							(click)="cancelClicked()"
-							[disabled]="!!savePromise"
-							[class.disabled]="!!savePromise"
-							[disabled-when-requesting]="true"
-							text="{{ 'General.cancel' | translate }}"
-						></oeb-button>
-
-						<oeb-button
-							id="create-badge-btn"
-							type="submit"
-							width="max_content"
-							[disabled]="!!savePromise"
-							[loading-promises]="[savePromise]"
-							loading-message="{{ 'General.save' | translate }}"
-							text="{{ 'General.save' | translate }}"
-						>
-						</oeb-button>
-					</div>
-				</form>
-			</div>
-		</div>
+					</oeb-button>
+				</div>
+			</form>
+		</section>
 	</div>
 </div>
