fix: update images

--- a/src/app/issuer/components/badgeclass-generate-qr/badgeclass-generate-qr.component.html
+++ b/src/app/issuer/components/badgeclass-generate-qr/badgeclass-generate-qr.component.html
@@ -38,7 +38,7 @@
 					<div class="tw-flex tw-gap-2">
 						<img
 							class="tw-w-[63.58px] tw-h-[63.58px] md:tw-w-[75.61px] md:tw-h-[75.61px] tw-block"
-							[loaded-src]="badgeClass.image"
+							[loaded-src]="previewB64Img"
 							[loading-src]="badgeLoadingImageUrl"
 							[error-src]="badgeFailedImageUrl"
 						/>
