--- a/src/app/issuer/components/edit-qr-form/edit-qr-form.component.html
+++ b/src/app/issuer/components/edit-qr-form/edit-qr-form.component.html
@@ -8,7 +8,7 @@
 					>
 						<img
 							class="tw-w-[133px] tw-h-[133px] tw-mx-auto tw-block"
-							[loaded-src]="badgeClass.image"
+							[loaded-src]="previewB64Img"
 							[loading-src]="badgeLoadingImageUrl"
 							[error-src]="badgeFailedImageUrl"
 						/>
@@ -27,7 +27,7 @@
 					{{ 'QrCode.create' | translate }} <br />
 					<span class="tw-font-black tw-text-purple tw-uppercase">{{ badgeClass.name }}</span>
 				</h2>
-				@if (issuer && issuer.is_network) {
+				@if (issuer && (issuer.is_network || isNetworkBadge)) {
 					<div class="tw-flex tw-gap-2 tw-items-center md:tw-mt-7 tw-mt-6">
 						<div class="tw-bg-white tw-w-[60px] tw-h-[60px] tw-flex tw-justify-center tw-items-center">
 							<img width="" [src]="issuer.image" alt="Issuer image" />
