fix: add max width

--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -68,7 +68,7 @@
 					<!-- Network section -->
 					@if (env.networksEnabled && networks.length) {
 						<section
-							class="tw-bg-oebgrey tw-mt-4 tw-rounded-[10px] tw-p-4 tw-flex tw-flex-col tw-justify-center tw-items-center"
+							class="tw-bg-oebgrey tw-mt-4 tw-rounded-[10px] tw-p-4 tw-flex tw-flex-col tw-justify-center tw-items-center tw-max-w-80"
 							aria-labelledby="networks-heading"
 						>
 							<h2 id="networks-heading" class="tw-w-full tw-text-lg tw-text-oebblack tw-font-bold">
