fix: horizontal alignment of inputs

--- a/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
+++ b/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
@@ -1130,7 +1130,7 @@
 							[innerHTML]="'CreateBadge.expirationInfo' | translate"
 						></span>
 						<div class="tw-w-fit tw-flex tw-gap-4 tw-text-oebblack tw-text-lg tw-mt-4">
-							<div class="tw-flex tw-items-baseline tw-gap-3">
+							<div class="tw-flex tw-items-center tw-gap-3">
 								<span>{{ 'General.count' | translate }}</span>
 								<oeb-input
 									id="duration-number"
@@ -1142,7 +1142,7 @@
 									}"
 								></oeb-input>
 							</div>
-							<div class="tw-flex tw-items-baseline tw-gap-3">
+							<div class="tw-flex tw-items-center tw-gap-3">
 								<span>{{ 'RecBadgeDetail.duration' | translate }}</span>
 
 								<oeb-select
