--- a/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
+++ b/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
@@ -1119,47 +1119,42 @@
 							}
 						</div>
 					}
-					<div class="section tw-text-oebblack tw-mt-6">
-						<h2 hlmH2 class="!tw-text-oebblack">
+
+					<!-- Expiration -->
+					<section class="section tw-text-oebblack tw-mt-6">
+						<h2 hlmH2 class="!tw-text-oebblack tw-pb-4">
 							{{ 'CreateBadge.expiration' | translate }}
 						</h2>
 						<span
-							class="tw-text-purple tw-italic tw-text-lg tw-mt-2"
+							class="tw-text-purple tw-italic tw-text-lg"
 							[innerHTML]="'CreateBadge.expirationInfo' | translate"
 						></span>
-						<div class="formsection-x-body">
-							<div class="tw-w-fit tw-flex tw-gap-6">
+						<div class="tw-w-fit tw-flex tw-gap-4 tw-text-oebblack tw-text-lg tw-mt-4">
+							<div class="tw-flex tw-items-center tw-gap-3">
+								<span>{{ 'General.count' | translate }}</span>
 								<oeb-input
 									id="duration-number"
-									[control]="expirationForm.rawControlMap.expires_amount"
-									[label]="count"
+									[control]="badgeClassForm.rawControlMap.expiration"
+									[noTopMargin]="true"
 									[fieldType]="'number'"
-									[max]="1000"
-									[maxchar]="4"
-									[min]="1"
 									[errorMessage]="{
 										max: maxValue1000,
 									}"
 								></oeb-input>
+							</div>
+							<div class="tw-flex tw-items-center tw-gap-3">
+								<span>{{ 'RecBadgeDetail.duration' | translate }}</span>
+
 								<oeb-select
+									[noTopMargin]="true"
 									[id]="'duration-type'"
 									ariaLabel="chooseDuration"
-									[control]="expirationForm.rawControlMap.expires_duration"
-									[label]="duration"
-									[placeholder]="chooseDuration"
+									[control]="badgeClassForm.rawControlMap.expiration_unit"
 									[optionMap]="durationOptions"
 								></oeb-select>
 							</div>
 						</div>
-						<!-- <div class="tw-mt-2 tw-mb-2 tw-flex tw-gap-2"> -->
-						<!-- <span [innerHTML]="'CreateBadge.validUntil' | translate"></span> -->
-						<!-- <oeb-input
-                        [errorMessage]="'Bitte gib ein Datum in der Form tt/mm/jjjj an'"
-                        [control]="expirationForm.rawControlMap.expires"
-                        fieldType="date"
-                      ></oeb-input> -->
-						<!-- </div> -->
-					</div>
+					</section>
 				</cdk-step>
 			</oeb-stepper>
 		</ng-container>
