fix: translations, hide input arrows

--- a/src/app/signup/components/signup/signup.component.html
+++ b/src/app/signup/components/signup/signup.component.html
@@ -128,6 +128,7 @@
 							></oeb-input>
 
 							<oeb-input
+								class="oeb-input-hide-arrows"
 								label="{{ 'General.optionalPostalCode' | translate }}"
 								[control]="signupForm.rawControlMap.zipCode"
 								[fieldType]="'number'"
