--- a/src/app/profile/components/profile-edit/profile-edit.component.html
+++ b/src/app/profile/components/profile-edit/profile-edit.component.html
@@ -9,13 +9,13 @@
 		</div>
 
 		<div class="l-containerxaxis">
-			<div class="topbar-x-heading">Edit Profile Name</div>
+			<div class="topbar-x-heading">{{ 'Profile.editProfile' | translate }}</div>
 		</div>
 	</div>
 
 	<div class="l-containerxaxis l-containeryaxis">
 		<form [formGroup]="profileEditForm.rawControl" (ngSubmit)="submitEdit()" class="l-form" novalidate>
-			<div class="u-width-form">
+			<div class="u-width-form tw-mb-4">
 				<oeb-input
 					[control]="profileEditForm.rawControlMap.firstName"
 					[label]="'Signup.fName' | translate"
@@ -29,6 +29,7 @@
 				/>
 
 				<oeb-input
+					class="oeb-input-hide-arrows"
 					label="{{ 'General.optionalPostalCode' | translate }}"
 					[control]="profileEditForm.rawControlMap.zipCode"
 					errorMessage="{{ 'Issuer.enterPostalCode' | translate }}"
@@ -37,9 +38,9 @@
 			</div>
 
 			<div class="l-flex l-flex-1x">
-				<a class="button button-secondary" [routerLink]="['../profile']">Cancel</a>
+				<a class="button button-secondary" [routerLink]="['../profile']">{{ 'General.cancel ' | translate }}</a>
 
-				<button type="submit" class="button">Save</button>
+				<button type="submit" class="button">{{ 'General.save' | translate }}</button>
 			</div>
 		</form>
 	</div>
