fix: adjust alignment, remove labels

--- a/src/app/issuer/components/badgeclass-edit-issued/badgeclass-edit-issued.component.html
+++ b/src/app/issuer/components/badgeclass-edit-issued/badgeclass-edit-issued.component.html
@@ -27,29 +27,22 @@
 
 				<section class="section tw-text-oebblack tw-text-lg">
 					<h2 hlmH2 class="!tw-text-oebblack tw-mb-4">{{ 'CreateBadge.expiration' | translate }}</h2>
-					<p class="tw-italic tw-mb-4" [innerHTML]="'CreateBadge.expirationInfo' | translate"></p>
-					<div class="tw-w-fit tw-flex tw-gap-4 tw-text-oebblack tw-text-lg tw-mt-4">
-						<div class="tw-flex tw-items-baseline tw-gap-3">
-							<span>{{ 'General.count' | translate }}</span>
-							<oeb-input
-								id="duration-number"
-								[control]="badgeClassForm.rawControlMap.expiration"
-								[noTopMargin]="true"
-								[fieldType]="'number'"
-							></oeb-input>
-						</div>
-						<div class="tw-flex tw-items-baseline tw-gap-3">
-							<span>{{ 'RecBadgeDetail.duration' | translate }}</span>
-
-							<oeb-select
-								[noTopMargin]="true"
-								[id]="'duration-type'"
-								ariaLabel="chooseDuration"
-								[control]="badgeClassForm.rawControlMap.expiration_unit"
-								[optionMap]="durationOptions"
-							></oeb-select>
-						</div>
+					<div class="tw-w-fit tw-flex tw-gap-4 tw-text-oebblack tw-text-lg tw-mt-4 tw-mb-4">
+						<oeb-input
+							id="duration-number"
+							[control]="badgeClassForm.rawControlMap.expiration"
+							[noTopMargin]="true"
+							[fieldType]="'number'"
+						></oeb-input>
+						<oeb-select
+							[noTopMargin]="true"
+							[id]="'duration-type'"
+							ariaLabel="chooseDuration"
+							[control]="badgeClassForm.rawControlMap.expiration_unit"
+							[optionMap]="durationOptions"
+						></oeb-select>
 					</div>
+					<p class="tw-italic tw-text-purple" [innerHTML]="'CreateBadge.expirationInfo' | translate"></p>
 				</section>
 
 				<div
