feat: migrate competency view to its own component

--- a/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
+++ b/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
@@ -180,118 +180,7 @@
 
 				<ng-template #badgesCompetency>
 					@if (activeTab === 'competencies') {
-						<div class="oeb-headline-container-sm">
-							<div class="oeb-section-sm">
-								<div class="tw-grid tw-grid-cols-1 md:tw-grid-cols-3 tw-gap-3">
-									<div
-										class="tw-bg-white tw-rounded-[10px] tw-border-purple tw-border-solid tw-border tw-h-[90px] tw-p-4"
-									>
-										<div class="tw-whitespace-nowrap tw-flex tw-items-center tw-mb-2">
-											<ng-icon hlm class="tw-mr-2" size="sm" name="lucideHexagon" /><span
-												hlmP
-												size="sm"
-												>{{ 'RecBadge.competencies' | translate }}</span
-											>
-										</div>
-										@if (!!allBadges) {
-											<p
-												hlmP
-												#countup
-												hlmP
-												class="tw-text-purple tw-font-bold"
-												[countUp]="objectKeys(groupedUserCompetencies).length"
-											></p>
-										}
-									</div>
-									<div
-										class="tw-bg-white tw-rounded-[10px] tw-border-purple tw-border-solid tw-border tw-h-[90px] tw-p-4"
-									>
-										<div class="tw-whitespace-nowrap tw-flex tw-items-center tw-mb-2">
-											<ng-icon hlm class="tw-mr-2" size="sm" name="lucideClock" /><span
-												hlmP
-												size="sm"
-												>{{ 'RecBadge.studyingTime' | translate }}</span
-											>
-										</div>
-										@if (!!allBadges) {
-											<p hlmP class="tw-text-purple tw-font-bold">
-												<span #countup2 [countUp]="totalStudyTime / 60">0</span>
-												{{ 'RecBadge.hours' | translate }}
-											</p>
-										}
-									</div>
-								</div>
-							</div>
-							<div class="oeb-section-sm">
-								@if (objectValues(newGroupedUserCompetencies).length > 0) {
-									<div class="lg:tw-flex tw-flex-wrap oeb-standard-padding-bottom">
-										<div class="tw-w-full lg:tw-w-[270px] lg:tw-flex-shrink-0 lg:tw-pb-0 tw-pb-4">
-											<div class="tw-flex tw-items-center">
-												<ng-icon hlm class="tw-mr-2" name="lucideHeart" />
-												<h3 hlmH3 class="tw-font-medium tw-text-oebblack tw-ml-2">
-													{{ 'RecBadge.newCompetencies' | translate }}
-												</h3>
-											</div>
-										</div>
-										<div class="tw-flex-grow">
-											<div class="tw-grid tw-grid-cols-1 tw-gap-2">
-												@for (
-													competency of objectValues(newGroupedUserCompetencies);
-													track competency
-												) {
-													<oeb-competency
-														[competency]="competency"
-														[new]="true"
-													></oeb-competency>
-												}
-											</div>
-										</div>
-									</div>
-								}
-								<div class="lg:tw-flex tw-flex-wrap oeb-standard-padding-bottom">
-									<div class="tw-w-full lg:tw-w-[270px] lg:tw-flex-shrink-0 lg:tw-pb-0 tw-pb-4">
-										<div class="tw-flex tw-items-center">
-											<ng-icon hlm class="tw-mr-2" name="lucideHand" />
-											<h3 hlmH3 class="tw-font-medium tw-text-oebblack tw-ml-2">
-												{{ 'RecBadge.skills' | translate }}
-											</h3>
-										</div>
-									</div>
-									<div class="tw-flex-grow">
-										<div class="tw-grid tw-grid-cols-1 tw-gap-2">
-											@for (
-												competency of objectValues(groupedUserCompetencies)
-													| dynamicFilter: { category: 'skill' };
-												track competency
-											) {
-												<oeb-competency [competency]="competency"></oeb-competency>
-											}
-										</div>
-									</div>
-								</div>
-								<div class="lg:tw-flex tw-flex-wrap oeb-standard-padding-bottom">
-									<div class="tw-w-full lg:tw-w-[270px] lg:tw-flex-shrink-0 lg:tw-pb-0 tw-pb-4">
-										<div class="tw-flex tw-items-center">
-											<ng-icon hlm class="tw-mr-2" name="lucideBookOpen" />
-											<h3 hlmH3 class="tw-font-medium tw-text-oebblack tw-ml-2">
-												{{ 'RecBadge.knowledge' | translate }}
-											</h3>
-										</div>
-									</div>
-									<div class="tw-flex-grow">
-										<div class="tw-grid tw-grid-cols-1 tw-gap-2">
-											@for (
-												competency of objectValues(groupedUserCompetencies)
-													| dynamicFilter: { category: 'knowledge' };
-												track competency
-											) {
-												<oeb-competency [competency]="competency"></oeb-competency>
-											}
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
+						<recipient-competency-overview [badges]="allBadges" />
 					}
 				</ng-template>
 				<ng-template #learningPathTemplate>
