--- a/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
+++ b/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
@@ -185,112 +185,7 @@
 				</ng-template>
 				<ng-template #learningPathTemplate>
 					<ng-template [bgAwaitPromises]="[learningpathLoaded]">
-						<!-- No badges, empty state! -->
-						@if (allLearningPaths.length === 0) {
-							<section class="emptysection l-emptysection">
-								<h2 class="emptysection-x-headline">{{ 'RecBadge.noLearningPathYet' | translate }}</h2>
-								<p class="emptysection-x-copy">{{ 'RecBadge.collectShareLearningPath' | translate }}</p>
-								<div class="emptysection-x-imagecontainer">
-									<img
-										alt="Illustration of backpack with badges"
-										class="emptysection-x-image"
-										[src]="noBadgesImageUrl"
-									/>
-								</div>
-							</section>
-						}
-
-						@if (allLearningPaths.length > 0) {
-							<div class="oeb-section-sm">
-								<div class="tw-flex tw-flex-wrap tw-items-center">
-									<input
-										type="text"
-										name="forminput"
-										id="forminput"
-										placeholder="{{ 'LearningPath.searchMds' | translate }}"
-										[(ngModel)]="searchQuery"
-										class="tw-w-[300px] tw-border-solid tw-border-purple tw-bg-white tw-mr-6"
-										hlmInput
-									/>
-								</div>
-							</div>
-						}
-
-						<div>
-							@if (learningPathsReadyToRequest.length > 0) {
-								<div class="oeb-section-sm">
-									<h3 hlmH3 class="tw-uppercase tw-text-purple tw-font-bold tw-pb-4">
-										{{ 'LearningPath.getYourPath' | translate }}
-									</h3>
-									<div class="tw-grid min-[450px]:tw-grid-cols-learningpathsBackpack tw-gap-6">
-										@for (lp of learningPathsReadyToRequest; track lp) {
-											<bg-learningpathcard
-												[badgeImage]="$any(lp).participationBadge_image"
-												[name]="lp.name"
-												[issuerTitle]="lp.issuer_name"
-												[description]="lp.description"
-												[tags]="lp.tags"
-												[slug]="lp.slug"
-												[studyLoad]="calculateStudyLoad(lp)"
-												[completed]="checkCompleted(lp)"
-												[progress]="lp.progress"
-												[requested]="lp.requested"
-												[matchOrProgress]="{ progress: lp.progress / calculateStudyLoad(lp) }"
-											></bg-learningpathcard>
-										}
-									</div>
-								</div>
-							}
-
-							@if (learningPathsInProgress.length > 0) {
-								<div class="oeb-section-sm">
-									<h3 hlmH3 class="tw-uppercase tw-text-purple tw-font-bold tw-pb-4">
-										{{ 'LearningPath.continue' | translate }}
-									</h3>
-									<div class="tw-grid min-[450px]:tw-grid-cols-learningpathsBackpack tw-gap-6">
-										@for (lp of learningPathsInProgress; track lp) {
-											<bg-learningpathcard
-												[badgeImage]="$any(lp).participationBadge_image"
-												[name]="lp.name"
-												[issuerTitle]="lp.issuer_name"
-												[description]="lp.description"
-												[tags]="lp.tags"
-												[slug]="lp.slug"
-												[progress]="lp.progress"
-												[completed]="checkCompleted(lp)"
-												[requested]="lp.requested"
-												[studyLoad]="calculateStudyLoad(lp)"
-												[matchOrProgress]="{ progress: lp.progress / calculateStudyLoad(lp) }"
-											></bg-learningpathcard>
-										}
-									</div>
-								</div>
-							}
-
-							@if (learningPathsCompleted.length > 0) {
-								<div class="oeb-section-sm">
-									<h3 hlmH3 class="tw-uppercase tw-text-purple tw-font-bold tw-pb-4">
-										{{ 'LearningPath.finished' | translate }}
-									</h3>
-									<div class="tw-grid min-[450px]:tw-grid-cols-learningpathsBackpack tw-gap-6">
-										@for (lp of learningPathsCompleted; track lp) {
-											<bg-learningpathcard
-												[badgeImage]="$any(lp).participationBadge_image"
-												[name]="lp.name"
-												[issuerTitle]="lp.issuer_name"
-												[description]="lp.description"
-												[tags]="lp.tags"
-												[slug]="lp.slug"
-												[progress]="lp.progress"
-												[completed]="true"
-												[studyLoad]="calculateStudyLoad(lp)"
-												[matchOrProgress]="{ progress: lp.progress / calculateStudyLoad(lp) }"
-											></bg-learningpathcard>
-										}
-									</div>
-								</div>
-							}
-						</div>
+						<recipient-learningpaths-overview [learningPaths]="allLearningPaths" />
 					</ng-template>
 				</ng-template>
 				<ng-template #collectionTemplate>
