--- a/src/app/issuer/components/badgeclass-detail/badgeclass-detail.component.html
+++ b/src/app/issuer/components/badgeclass-detail/badgeclass-detail.component.html
@@ -1,7 +1,7 @@
 <bg-badgedetail [config]="config" [awaitPromises]="[issuerLoaded, badgeClassLoaded]">
 	<oeb-tabs [variant]="'black'" (onTabChanged)="onTabChange($event)" [activeTab]="activeTab" [tabs]="tabs">
 	</oeb-tabs>
-	<ng-template #qrAwards>
+	<div #qrAwards>
 		@if (issuer && issuer.is_network) {
 			@if (!networkQrCodeApiAwards.length) {
 				<qrcode-awards
@@ -42,7 +42,7 @@
 				[defaultUnfolded]="focusRequests"
 			></qrcode-awards>
 		}
-	</ng-template>
+	</div>
 	<ng-template #batchAwards>
 		@if (issuer) {
 			@if (issuer.is_network) {
