fix: hide input arrows

--- a/src/app/issuer/components/optional-details/optional-details.component.html
+++ b/src/app/issuer/components/optional-details/optional-details.component.html
@@ -215,6 +215,7 @@
 							<div class="tw-flex tw-gap-4">
 								@if (hasControl('activity_zip')) {
 									<oeb-input
+										class="oeb-input-hide-arrows"
 										[control]="getRawControl('activity_zip')"
 										[label]="'General.postalCode' | translate"
 										[labelStyle]="'tw-text-oebblack tw-font-normal tw-text-lg'"
