--- a/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
+++ b/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
@@ -1125,35 +1125,28 @@
 						<h2 hlmH2 class="!tw-text-oebblack tw-pb-4">
 							{{ 'CreateBadge.expiration' | translate }}
 						</h2>
-						<span
-							class="tw-text-purple tw-italic tw-text-lg"
-							[innerHTML]="'CreateBadge.expirationInfo' | translate"
-						></span>
-						<div class="tw-w-fit tw-flex tw-gap-4 tw-text-oebblack tw-text-lg tw-mt-4">
-							<div class="tw-flex tw-items-center tw-gap-3">
-								<span>{{ 'General.count' | translate }}</span>
-								<oeb-input
-									id="duration-number"
-									[control]="badgeClassForm.rawControlMap.expiration"
-									[noTopMargin]="true"
-									[fieldType]="'number'"
-									[errorMessage]="{
-										max: maxValue1000,
-									}"
-								></oeb-input>
-							</div>
-							<div class="tw-flex tw-items-center tw-gap-3">
-								<span>{{ 'RecBadgeDetail.duration' | translate }}</span>
-
-								<oeb-select
-									[noTopMargin]="true"
-									[id]="'duration-type'"
-									ariaLabel="chooseDuration"
-									[control]="badgeClassForm.rawControlMap.expiration_unit"
-									[optionMap]="durationOptions"
-								></oeb-select>
-							</div>
+						<div class="tw-w-fit tw-flex tw-gap-4 tw-text-oebblack tw-text-lg tw-mt-4 tw-mb-4">
+							<oeb-input
+								id="duration-number"
+								[control]="badgeClassForm.rawControlMap.expiration"
+								[noTopMargin]="true"
+								[fieldType]="'number'"
+								[errorMessage]="{
+									max: maxValue1000,
+								}"
+							></oeb-input>
+							<oeb-select
+								[noTopMargin]="true"
+								[id]="'duration-type'"
+								ariaLabel="chooseDuration"
+								[control]="badgeClassForm.rawControlMap.expiration_unit"
+								[optionMap]="durationOptions"
+							></oeb-select>
 						</div>
+						<p
+							class="tw-italic tw-text-purple tw-text-lg"
+							[innerHTML]="'CreateBadge.expirationInfo' | translate"
+						></p>
 					</section>
 				</cdk-step>
 			</oeb-stepper>
